Practicas/P5/y.output
Estado 42 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 $@1: /* vacío */

    2 programa: $@1 cabecera_programa bloque

    3 cabecera_programa: MAIN

    4 $@2: /* vacío */

    5 $@3: /* vacío */

    6 bloque: INICIO $@2 declar_de_variables_locales $@3 declar_de_subprogs sentencias FINBLO

    7 declar_de_subprogs: declar_de_subprogs declar_subprog
    8                   | /* vacío */

    9 $@4: /* vacío */

   10 declar_subprog: cabecera_subprograma $@4 bloque

   11 $@5: /* vacío */

   12 cabecera_subprograma: PROCED IDENTIFICADOR PARIZ $@5 declar_parametros PARDER

   13 $@6: /* vacío */

   14 cabecera_subprograma: PROCED IDENTIFICADOR PARIZ $@6 PARDER

   15 $@7: /* vacío */

   16 declar_parametros: declar_parametros COMA TIPOSIMPLE $@7 iden

   17 $@8: /* vacío */

   18 declar_parametros: TIPOSIMPLE $@8 iden
   19                  | error

   20 iden: IDENTIFICADOR
   21     | IDENTIFICADOR CORIZ expresion CORDER
   22     | IDENTIFICADOR CORIZ expresion COMA expresion CORDER

   23 declar_de_variables_locales: INICIOV variables_locales FINV
   24                            | /* vacío */

   25 variables_locales: variables_locales cuerpo_decla_variables
   26                  | cuerpo_decla_variables
   27                  | error

   28 $@9: /* vacío */

   29 $@10: /* vacío */

   30 cuerpo_decla_variables: TIPOSIMPLE $@9 lista_variables $@10 PYC

   31 $@11: /* vacío */

   32 lista_variables: lista_variables COMA $@11 iden
   33                | iden
   34                | error

   35 sentencias: sentencias sentencia
   36           | sentencia

   37 sentencia: bloque
   38          | sentencia_asignacion
   39          | sentencia_if
   40          | sentencia_while
   41          | sentencia_entrada
   42          | sentencia_salida
   43          | procedimiento
   44          | sentencia_case
   45          | error

   46 $@12: /* vacío */

   47 $@13: /* vacío */

   48 sentencia_asignacion: iden $@12 ASIG expresion $@13 PYC

   49 expresion: PARIZ expresion PARDER
   50          | OPB_ADD expresion
   51          | expresion OPB_OR expresion
   52          | expresion OPB_AND expresion
   53          | expresion OPB_IG expresion
   54          | expresion OPB_REL expresion
   55          | expresion OPB_ADD expresion
   56          | expresion OPB_MUL expresion
   57          | OPU expresion
   58          | iden
   59          | CONSTANTE
   60          | CONSTANTE_E
   61          | CARACTER
   62          | agregados
   63          | error

   64 $@14: /* vacío */

   65 @15: /* vacío */

   66 procedimiento: IDENTIFICADOR PARIZ $@14 lista_expresiones PARDER @15 PYC

   67 @16: /* vacío */

   68 procedimiento: IDENTIFICADOR PARIZ PARDER @16 PYC

   69 agregados: INICIO lista_expresiones FINBLO

   70 lista_expresiones: lista_expresiones COMA expresion
   71                  | expresion

   72 sentencia_if: alternativa_doble
   73             | alternativa_simple

   74 alternativa_simple: if_expresion_sentencia

   75 alternativa_doble: if_expresion_sentencia ELSE sentencia

   76 $@17: /* vacío */

   77 $@18: /* vacío */

   78 if_expresion_sentencia: $@17 IF expresion $@18 sentencia

   79 $@19: /* vacío */

   80 sentencia_while: WHILE PARIZ expresion $@19 PARDER sentencia

   81 sentencia_entrada: READ lista_variables PYC

   82 sentencia_salida: WRITE lista_expresiones_o_cadena PYC

   83 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion_o_cadena
   84                           | expresion_o_cadena

   85 expresion_o_cadena: expresion
   86                   | CADENA

   87 sentencia_case: SWITCH PARIZ IDENTIFICADOR PARDER INICIO casos caso_por_defecto FINBLO

   88 casos: casos CASE opcion DOSP sentencias BREAK PYC
   89      | /* vacío */

   90 opcion: CONSTANTE_E
   91       | CARACTER

   92 caso_por_defecto: DEFAULT DOSP sentencias
   93                 | /* vacío */


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 19 27 34 45 63
MAIN (258) 3
INICIO (259) 6 69 87
FINBLO (260) 6 69 87
INICIOV (261) 23
FINV (262) 23
PYC (263) 30 48 66 68 81 82 88
COMA (264) 16 22 32 70 83
TIPOSIMPLE (265) 16 18 30
PROCED (266) 12 14
CORIZ (267) 21 22
CORDER (268) 21 22
IF (269) 78
ELSE (270) 75
WHILE (271) 80
READ (272) 81
WRITE (273) 82
SWITCH (274) 87
CASE (275) 88
DEFAULT (276) 92
DOSP (277) 88 92
BREAK (278) 88
CONSTANTE (279) 59
PARDER (280) 12 14 49 66 68 80 87
PARIZ (281) 12 14 49 66 68 80 87
CADENA (282) 86
IDENTIFICADOR (283) 12 14 20 21 22 66 68 87
CONSTANTE_E (284) 60 90
CARACTER (285) 61 91
ASIG (286) 48
OPB_OR (287) 51
OPB_AND (288) 52
OPB_IG (289) 53
OPB_REL (290) 54
OPB_ADD (291) 50 55
OPB_MUL (292) 56
OPU (293) 57


No terminales con las reglas donde aparecen

$accept (39)
    en la izquierda: 0
programa (40)
    en la izquierda: 2, en la derecha: 0
$@1 (41)
    en la izquierda: 1, en la derecha: 2
cabecera_programa (42)
    en la izquierda: 3, en la derecha: 2
bloque (43)
    en la izquierda: 6, en la derecha: 2 10 37
$@2 (44)
    en la izquierda: 4, en la derecha: 6
$@3 (45)
    en la izquierda: 5, en la derecha: 6
declar_de_subprogs (46)
    en la izquierda: 7 8, en la derecha: 6 7
declar_subprog (47)
    en la izquierda: 10, en la derecha: 7
$@4 (48)
    en la izquierda: 9, en la derecha: 10
cabecera_subprograma (49)
    en la izquierda: 12 14, en la derecha: 10
$@5 (50)
    en la izquierda: 11, en la derecha: 12
$@6 (51)
    en la izquierda: 13, en la derecha: 14
declar_parametros (52)
    en la izquierda: 16 18 19, en la derecha: 12 16
$@7 (53)
    en la izquierda: 15, en la derecha: 16
$@8 (54)
    en la izquierda: 17, en la derecha: 18
iden (55)
    en la izquierda: 20 21 22, en la derecha: 16 18 32 33 48 58
declar_de_variables_locales (56)
    en la izquierda: 23 24, en la derecha: 6
variables_locales (57)
    en la izquierda: 25 26 27, en la derecha: 23 25
cuerpo_decla_variables (58)
    en la izquierda: 30, en la derecha: 25 26
$@9 (59)
    en la izquierda: 28, en la derecha: 30
$@10 (60)
    en la izquierda: 29, en la derecha: 30
lista_variables (61)
    en la izquierda: 32 33 34, en la derecha: 30 32 81
$@11 (62)
    en la izquierda: 31, en la derecha: 32
sentencias (63)
    en la izquierda: 35 36, en la derecha: 6 35 88 92
sentencia (64)
    en la izquierda: 37 38 39 40 41 42 43 44 45, en la derecha: 35
    36 75 78 80
sentencia_asignacion (65)
    en la izquierda: 48, en la derecha: 38
$@12 (66)
    en la izquierda: 46, en la derecha: 48
$@13 (67)
    en la izquierda: 47, en la derecha: 48
expresion (68)
    en la izquierda: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63,
    en la derecha: 21 22 48 49 50 51 52 53 54 55 56 57 70 71 78 80
    85
procedimiento (69)
    en la izquierda: 66 68, en la derecha: 43
$@14 (70)
    en la izquierda: 64, en la derecha: 66
@15 (71)
    en la izquierda: 65, en la derecha: 66
@16 (72)
    en la izquierda: 67, en la derecha: 68
agregados (73)
    en la izquierda: 69, en la derecha: 62
lista_expresiones (74)
    en la izquierda: 70 71, en la derecha: 66 69 70
sentencia_if (75)
    en la izquierda: 72 73, en la derecha: 39
alternativa_simple (76)
    en la izquierda: 74, en la derecha: 73
alternativa_doble (77)
    en la izquierda: 75, en la derecha: 72
if_expresion_sentencia (78)
    en la izquierda: 78, en la derecha: 74 75
$@17 (79)
    en la izquierda: 76, en la derecha: 78
$@18 (80)
    en la izquierda: 77, en la derecha: 78
sentencia_while (81)
    en la izquierda: 80, en la derecha: 40
$@19 (82)
    en la izquierda: 79, en la derecha: 80
sentencia_entrada (83)
    en la izquierda: 81, en la derecha: 41
sentencia_salida (84)
    en la izquierda: 82, en la derecha: 42
lista_expresiones_o_cadena (85)
    en la izquierda: 83 84, en la derecha: 82 83
expresion_o_cadena (86)
    en la izquierda: 85 86, en la derecha: 83 84
sentencia_case (87)
    en la izquierda: 87, en la derecha: 44
casos (88)
    en la izquierda: 88 89, en la derecha: 87 88
opcion (89)
    en la izquierda: 90 91, en la derecha: 88
caso_por_defecto (90)
    en la izquierda: 92 93, en la derecha: 87


estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 1 ($@1)

    programa  ir al estado 1
    $@1       ir al estado 2


estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


estado 2

    2 programa: $@1 . cabecera_programa bloque

    MAIN  desplazar e ir al estado 4

    cabecera_programa  ir al estado 5


estado 3

    0 $accept: programa $end .

    $default  aceptar


estado 4

    3 cabecera_programa: MAIN .

    $default  reduce usando la regla 3 (cabecera_programa)


estado 5

    2 programa: $@1 cabecera_programa . bloque

    INICIO  desplazar e ir al estado 6

    bloque  ir al estado 7


estado 6

    6 bloque: INICIO . $@2 declar_de_variables_locales $@3 declar_de_subprogs sentencias FINBLO

    $default  reduce usando la regla 4 ($@2)

    $@2  ir al estado 8


estado 7

    2 programa: $@1 cabecera_programa bloque .

    $default  reduce usando la regla 2 (programa)


estado 8

    6 bloque: INICIO $@2 . declar_de_variables_locales $@3 declar_de_subprogs sentencias FINBLO

    INICIOV  desplazar e ir al estado 9

    $default  reduce usando la regla 24 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 10


estado 9

   23 declar_de_variables_locales: INICIOV . variables_locales FINV

    error       desplazar e ir al estado 11
    TIPOSIMPLE  desplazar e ir al estado 12

    variables_locales       ir al estado 13
    cuerpo_decla_variables  ir al estado 14


estado 10

    6 bloque: INICIO $@2 declar_de_variables_locales . $@3 declar_de_subprogs sentencias FINBLO

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 15


estado 11

   27 variables_locales: error .

    $default  reduce usando la regla 27 (variables_locales)


estado 12

   30 cuerpo_decla_variables: TIPOSIMPLE . $@9 lista_variables $@10 PYC

    $default  reduce usando la regla 28 ($@9)

    $@9  ir al estado 16


estado 13

   23 declar_de_variables_locales: INICIOV variables_locales . FINV
   25 variables_locales: variables_locales . cuerpo_decla_variables

    FINV        desplazar e ir al estado 17
    TIPOSIMPLE  desplazar e ir al estado 12

    cuerpo_decla_variables  ir al estado 18


estado 14

   26 variables_locales: cuerpo_decla_variables .

    $default  reduce usando la regla 26 (variables_locales)


estado 15

    6 bloque: INICIO $@2 declar_de_variables_locales $@3 . declar_de_subprogs sentencias FINBLO

    $default  reduce usando la regla 8 (declar_de_subprogs)

    declar_de_subprogs  ir al estado 19


estado 16

   30 cuerpo_decla_variables: TIPOSIMPLE $@9 . lista_variables $@10 PYC

    error          desplazar e ir al estado 20
    IDENTIFICADOR  desplazar e ir al estado 21

    iden             ir al estado 22
    lista_variables  ir al estado 23


estado 17

   23 declar_de_variables_locales: INICIOV variables_locales FINV .

    $default  reduce usando la regla 23 (declar_de_variables_locales)


estado 18

   25 variables_locales: variables_locales cuerpo_decla_variables .

    $default  reduce usando la regla 25 (variables_locales)


estado 19

    6 bloque: INICIO $@2 declar_de_variables_locales $@3 declar_de_subprogs . sentencias FINBLO
    7 declar_de_subprogs: declar_de_subprogs . declar_subprog

    error          desplazar e ir al estado 24
    INICIO         desplazar e ir al estado 6
    PROCED         desplazar e ir al estado 25
    WHILE          desplazar e ir al estado 26
    READ           desplazar e ir al estado 27
    WRITE          desplazar e ir al estado 28
    SWITCH         desplazar e ir al estado 29
    IDENTIFICADOR  desplazar e ir al estado 30

    IF  reduce usando la regla 76 ($@17)

    bloque                  ir al estado 31
    declar_subprog          ir al estado 32
    cabecera_subprograma    ir al estado 33
    iden                    ir al estado 34
    sentencias              ir al estado 35
    sentencia               ir al estado 36
    sentencia_asignacion    ir al estado 37
    procedimiento           ir al estado 38
    sentencia_if            ir al estado 39
    alternativa_simple      ir al estado 40
    alternativa_doble       ir al estado 41
    if_expresion_sentencia  ir al estado 42
    $@17                    ir al estado 43
    sentencia_while         ir al estado 44
    sentencia_entrada       ir al estado 45
    sentencia_salida        ir al estado 46
    sentencia_case          ir al estado 47


estado 20

   34 lista_variables: error .

    $default  reduce usando la regla 34 (lista_variables)


estado 21

   20 iden: IDENTIFICADOR .
   21     | IDENTIFICADOR . CORIZ expresion CORDER
   22     | IDENTIFICADOR . CORIZ expresion COMA expresion CORDER

    CORIZ  desplazar e ir al estado 48

    $default  reduce usando la regla 20 (iden)


estado 22

   33 lista_variables: iden .

    $default  reduce usando la regla 33 (lista_variables)


estado 23

   30 cuerpo_decla_variables: TIPOSIMPLE $@9 lista_variables . $@10 PYC
   32 lista_variables: lista_variables . COMA $@11 iden

    COMA  desplazar e ir al estado 49

    $default  reduce usando la regla 29 ($@10)

    $@10  ir al estado 50


estado 24

   45 sentencia: error .

    $default  reduce usando la regla 45 (sentencia)


estado 25

   12 cabecera_subprograma: PROCED . IDENTIFICADOR PARIZ $@5 declar_parametros PARDER
   14                     | PROCED . IDENTIFICADOR PARIZ $@6 PARDER

    IDENTIFICADOR  desplazar e ir al estado 51


estado 26

   80 sentencia_while: WHILE . PARIZ expresion $@19 PARDER sentencia

    PARIZ  desplazar e ir al estado 52


estado 27

   81 sentencia_entrada: READ . lista_variables PYC

    error          desplazar e ir al estado 20
    IDENTIFICADOR  desplazar e ir al estado 21

    iden             ir al estado 22
    lista_variables  ir al estado 53


estado 28

   82 sentencia_salida: WRITE . lista_expresiones_o_cadena PYC

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    CADENA         desplazar e ir al estado 58
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62

    iden                        ir al estado 63
    expresion                   ir al estado 64
    agregados                   ir al estado 65
    lista_expresiones_o_cadena  ir al estado 66
    expresion_o_cadena          ir al estado 67


estado 29

   87 sentencia_case: SWITCH . PARIZ IDENTIFICADOR PARDER INICIO casos caso_por_defecto FINBLO

    PARIZ  desplazar e ir al estado 68


estado 30

   20 iden: IDENTIFICADOR .
   21     | IDENTIFICADOR . CORIZ expresion CORDER
   22     | IDENTIFICADOR . CORIZ expresion COMA expresion CORDER
   66 procedimiento: IDENTIFICADOR . PARIZ $@14 lista_expresiones PARDER @15 PYC
   68              | IDENTIFICADOR . PARIZ PARDER @16 PYC

    CORIZ  desplazar e ir al estado 48
    PARIZ  desplazar e ir al estado 69

    $default  reduce usando la regla 20 (iden)


estado 31

   37 sentencia: bloque .

    $default  reduce usando la regla 37 (sentencia)


estado 32

    7 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce usando la regla 7 (declar_de_subprogs)


estado 33

   10 declar_subprog: cabecera_subprograma . $@4 bloque

    $default  reduce usando la regla 9 ($@4)

    $@4  ir al estado 70


estado 34

   48 sentencia_asignacion: iden . $@12 ASIG expresion $@13 PYC

    $default  reduce usando la regla 46 ($@12)

    $@12  ir al estado 71


estado 35

    6 bloque: INICIO $@2 declar_de_variables_locales $@3 declar_de_subprogs sentencias . FINBLO
   35 sentencias: sentencias . sentencia

    error          desplazar e ir al estado 24
    INICIO         desplazar e ir al estado 6
    FINBLO         desplazar e ir al estado 72
    WHILE          desplazar e ir al estado 26
    READ           desplazar e ir al estado 27
    WRITE          desplazar e ir al estado 28
    SWITCH         desplazar e ir al estado 29
    IDENTIFICADOR  desplazar e ir al estado 30

    IF  reduce usando la regla 76 ($@17)

    bloque                  ir al estado 31
    iden                    ir al estado 34
    sentencia               ir al estado 73
    sentencia_asignacion    ir al estado 37
    procedimiento           ir al estado 38
    sentencia_if            ir al estado 39
    alternativa_simple      ir al estado 40
    alternativa_doble       ir al estado 41
    if_expresion_sentencia  ir al estado 42
    $@17                    ir al estado 43
    sentencia_while         ir al estado 44
    sentencia_entrada       ir al estado 45
    sentencia_salida        ir al estado 46
    sentencia_case          ir al estado 47


estado 36

   36 sentencias: sentencia .

    $default  reduce usando la regla 36 (sentencias)


estado 37

   38 sentencia: sentencia_asignacion .

    $default  reduce usando la regla 38 (sentencia)


estado 38

   43 sentencia: procedimiento .

    $default  reduce usando la regla 43 (sentencia)


estado 39

   39 sentencia: sentencia_if .

    $default  reduce usando la regla 39 (sentencia)


estado 40

   73 sentencia_if: alternativa_simple .

    $default  reduce usando la regla 73 (sentencia_if)


estado 41

   72 sentencia_if: alternativa_doble .

    $default  reduce usando la regla 72 (sentencia_if)


estado 42

   74 alternativa_simple: if_expresion_sentencia .
   75 alternativa_doble: if_expresion_sentencia . ELSE sentencia

    ELSE  desplazar e ir al estado 74

    ELSE      [reduce usando la regla 74 (alternativa_simple)]
    $default  reduce usando la regla 74 (alternativa_simple)


estado 43

   78 if_expresion_sentencia: $@17 . IF expresion $@18 sentencia

    IF  desplazar e ir al estado 75


estado 44

   40 sentencia: sentencia_while .

    $default  reduce usando la regla 40 (sentencia)


estado 45

   41 sentencia: sentencia_entrada .

    $default  reduce usando la regla 41 (sentencia)


estado 46

   42 sentencia: sentencia_salida .

    $default  reduce usando la regla 42 (sentencia)


estado 47

   44 sentencia: sentencia_case .

    $default  reduce usando la regla 44 (sentencia)


estado 48

   21 iden: IDENTIFICADOR CORIZ . expresion CORDER
   22     | IDENTIFICADOR CORIZ . expresion COMA expresion CORDER

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62

    iden       ir al estado 63
    expresion  ir al estado 76
    agregados  ir al estado 65


estado 49

   32 lista_variables: lista_variables COMA . $@11 iden

    $default  reduce usando la regla 31 ($@11)

    $@11  ir al estado 77


estado 50

   30 cuerpo_decla_variables: TIPOSIMPLE $@9 lista_variables $@10 . PYC

    PYC  desplazar e ir al estado 78


estado 51

   12 cabecera_subprograma: PROCED IDENTIFICADOR . PARIZ $@5 declar_parametros PARDER
   14                     | PROCED IDENTIFICADOR . PARIZ $@6 PARDER

    PARIZ  desplazar e ir al estado 79


estado 52

   80 sentencia_while: WHILE PARIZ . expresion $@19 PARDER sentencia

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62

    iden       ir al estado 63
    expresion  ir al estado 80
    agregados  ir al estado 65


estado 53

   32 lista_variables: lista_variables . COMA $@11 iden
   81 sentencia_entrada: READ lista_variables . PYC

    PYC   desplazar e ir al estado 81
    COMA  desplazar e ir al estado 49


estado 54

   63 expresion: error .

    $default  reduce usando la regla 63 (expresion)


estado 55

   69 agregados: INICIO . lista_expresiones FINBLO

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62

    iden               ir al estado 63
    expresion          ir al estado 82
    agregados          ir al estado 65
    lista_expresiones  ir al estado 83


estado 56

   59 expresion: CONSTANTE .

    $default  reduce usando la regla 59 (expresion)


estado 57

   49 expresion: PARIZ . expresion PARDER

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62

    iden       ir al estado 63
    expresion  ir al estado 84
    agregados  ir al estado 65


estado 58

   86 expresion_o_cadena: CADENA .

    $default  reduce usando la regla 86 (expresion_o_cadena)


estado 59

   60 expresion: CONSTANTE_E .

    $default  reduce usando la regla 60 (expresion)


estado 60

   61 expresion: CARACTER .

    $default  reduce usando la regla 61 (expresion)


estado 61

   50 expresion: OPB_ADD . expresion

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62

    iden       ir al estado 63
    expresion  ir al estado 85
    agregados  ir al estado 65


estado 62

   57 expresion: OPU . expresion

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62

    iden       ir al estado 63
    expresion  ir al estado 86
    agregados  ir al estado 65


estado 63

   58 expresion: iden .

    $default  reduce usando la regla 58 (expresion)


estado 64

   51 expresion: expresion . OPB_OR expresion
   52          | expresion . OPB_AND expresion
   53          | expresion . OPB_IG expresion
   54          | expresion . OPB_REL expresion
   55          | expresion . OPB_ADD expresion
   56          | expresion . OPB_MUL expresion
   85 expresion_o_cadena: expresion .

    OPB_OR   desplazar e ir al estado 87
    OPB_AND  desplazar e ir al estado 88
    OPB_IG   desplazar e ir al estado 89
    OPB_REL  desplazar e ir al estado 90
    OPB_ADD  desplazar e ir al estado 91
    OPB_MUL  desplazar e ir al estado 92

    $default  reduce usando la regla 85 (expresion_o_cadena)


estado 65

   62 expresion: agregados .

    $default  reduce usando la regla 62 (expresion)


estado 66

   82 sentencia_salida: WRITE lista_expresiones_o_cadena . PYC
   83 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA expresion_o_cadena

    PYC   desplazar e ir al estado 93
    COMA  desplazar e ir al estado 94


estado 67

   84 lista_expresiones_o_cadena: expresion_o_cadena .

    $default  reduce usando la regla 84 (lista_expresiones_o_cadena)


estado 68

   87 sentencia_case: SWITCH PARIZ . IDENTIFICADOR PARDER INICIO casos caso_por_defecto FINBLO

    IDENTIFICADOR  desplazar e ir al estado 95


estado 69

   66 procedimiento: IDENTIFICADOR PARIZ . $@14 lista_expresiones PARDER @15 PYC
   68              | IDENTIFICADOR PARIZ . PARDER @16 PYC

    PARDER  desplazar e ir al estado 96

    $default  reduce usando la regla 64 ($@14)

    $@14  ir al estado 97


estado 70

   10 declar_subprog: cabecera_subprograma $@4 . bloque

    INICIO  desplazar e ir al estado 6

    bloque  ir al estado 98


estado 71

   48 sentencia_asignacion: iden $@12 . ASIG expresion $@13 PYC

    ASIG  desplazar e ir al estado 99


estado 72

    6 bloque: INICIO $@2 declar_de_variables_locales $@3 declar_de_subprogs sentencias FINBLO .

    $default  reduce usando la regla 6 (bloque)


estado 73

   35 sentencias: sentencias sentencia .

    $default  reduce usando la regla 35 (sentencias)


estado 74

   75 alternativa_doble: if_expresion_sentencia ELSE . sentencia

    error          desplazar e ir al estado 24
    INICIO         desplazar e ir al estado 6
    WHILE          desplazar e ir al estado 26
    READ           desplazar e ir al estado 27
    WRITE          desplazar e ir al estado 28
    SWITCH         desplazar e ir al estado 29
    IDENTIFICADOR  desplazar e ir al estado 30

    IF  reduce usando la regla 76 ($@17)

    bloque                  ir al estado 31
    iden                    ir al estado 34
    sentencia               ir al estado 100
    sentencia_asignacion    ir al estado 37
    procedimiento           ir al estado 38
    sentencia_if            ir al estado 39
    alternativa_simple      ir al estado 40
    alternativa_doble       ir al estado 41
    if_expresion_sentencia  ir al estado 42
    $@17                    ir al estado 43
    sentencia_while         ir al estado 44
    sentencia_entrada       ir al estado 45
    sentencia_salida        ir al estado 46
    sentencia_case          ir al estado 47


estado 75

   78 if_expresion_sentencia: $@17 IF . expresion $@18 sentencia

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62

    iden       ir al estado 63
    expresion  ir al estado 101
    agregados  ir al estado 65


estado 76

   21 iden: IDENTIFICADOR CORIZ expresion . CORDER
   22     | IDENTIFICADOR CORIZ expresion . COMA expresion CORDER
   51 expresion: expresion . OPB_OR expresion
   52          | expresion . OPB_AND expresion
   53          | expresion . OPB_IG expresion
   54          | expresion . OPB_REL expresion
   55          | expresion . OPB_ADD expresion
   56          | expresion . OPB_MUL expresion

    COMA     desplazar e ir al estado 102
    CORDER   desplazar e ir al estado 103
    OPB_OR   desplazar e ir al estado 87
    OPB_AND  desplazar e ir al estado 88
    OPB_IG   desplazar e ir al estado 89
    OPB_REL  desplazar e ir al estado 90
    OPB_ADD  desplazar e ir al estado 91
    OPB_MUL  desplazar e ir al estado 92


estado 77

   32 lista_variables: lista_variables COMA $@11 . iden

    IDENTIFICADOR  desplazar e ir al estado 21

    iden  ir al estado 104


estado 78

   30 cuerpo_decla_variables: TIPOSIMPLE $@9 lista_variables $@10 PYC .

    $default  reduce usando la regla 30 (cuerpo_decla_variables)


estado 79

   12 cabecera_subprograma: PROCED IDENTIFICADOR PARIZ . $@5 declar_parametros PARDER
   14                     | PROCED IDENTIFICADOR PARIZ . $@6 PARDER

    PARDER    reduce usando la regla 13 ($@6)
    $default  reduce usando la regla 11 ($@5)

    $@5  ir al estado 105
    $@6  ir al estado 106


estado 80

   51 expresion: expresion . OPB_OR expresion
   52          | expresion . OPB_AND expresion
   53          | expresion . OPB_IG expresion
   54          | expresion . OPB_REL expresion
   55          | expresion . OPB_ADD expresion
   56          | expresion . OPB_MUL expresion
   80 sentencia_while: WHILE PARIZ expresion . $@19 PARDER sentencia

    OPB_OR   desplazar e ir al estado 87
    OPB_AND  desplazar e ir al estado 88
    OPB_IG   desplazar e ir al estado 89
    OPB_REL  desplazar e ir al estado 90
    OPB_ADD  desplazar e ir al estado 91
    OPB_MUL  desplazar e ir al estado 92

    $default  reduce usando la regla 79 ($@19)

    $@19  ir al estado 107


estado 81

   81 sentencia_entrada: READ lista_variables PYC .

    $default  reduce usando la regla 81 (sentencia_entrada)


estado 82

   51 expresion: expresion . OPB_OR expresion
   52          | expresion . OPB_AND expresion
   53          | expresion . OPB_IG expresion
   54          | expresion . OPB_REL expresion
   55          | expresion . OPB_ADD expresion
   56          | expresion . OPB_MUL expresion
   71 lista_expresiones: expresion .

    OPB_OR   desplazar e ir al estado 87
    OPB_AND  desplazar e ir al estado 88
    OPB_IG   desplazar e ir al estado 89
    OPB_REL  desplazar e ir al estado 90
    OPB_ADD  desplazar e ir al estado 91
    OPB_MUL  desplazar e ir al estado 92

    $default  reduce usando la regla 71 (lista_expresiones)


estado 83

   69 agregados: INICIO lista_expresiones . FINBLO
   70 lista_expresiones: lista_expresiones . COMA expresion

    FINBLO  desplazar e ir al estado 108
    COMA    desplazar e ir al estado 109


estado 84

   49 expresion: PARIZ expresion . PARDER
   51          | expresion . OPB_OR expresion
   52          | expresion . OPB_AND expresion
   53          | expresion . OPB_IG expresion
   54          | expresion . OPB_REL expresion
   55          | expresion . OPB_ADD expresion
   56          | expresion . OPB_MUL expresion

    PARDER   desplazar e ir al estado 110
    OPB_OR   desplazar e ir al estado 87
    OPB_AND  desplazar e ir al estado 88
    OPB_IG   desplazar e ir al estado 89
    OPB_REL  desplazar e ir al estado 90
    OPB_ADD  desplazar e ir al estado 91
    OPB_MUL  desplazar e ir al estado 92


estado 85

   50 expresion: OPB_ADD expresion .
   51          | expresion . OPB_OR expresion
   52          | expresion . OPB_AND expresion
   53          | expresion . OPB_IG expresion
   54          | expresion . OPB_REL expresion
   55          | expresion . OPB_ADD expresion
   56          | expresion . OPB_MUL expresion

    $default  reduce usando la regla 50 (expresion)


estado 86

   51 expresion: expresion . OPB_OR expresion
   52          | expresion . OPB_AND expresion
   53          | expresion . OPB_IG expresion
   54          | expresion . OPB_REL expresion
   55          | expresion . OPB_ADD expresion
   56          | expresion . OPB_MUL expresion
   57          | OPU expresion .

    $default  reduce usando la regla 57 (expresion)


estado 87

   51 expresion: expresion OPB_OR . expresion

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62

    iden       ir al estado 63
    expresion  ir al estado 111
    agregados  ir al estado 65


estado 88

   52 expresion: expresion OPB_AND . expresion

    error          desplazar e ir al estado 54
    INICIO         desplazar e ir al estado 55
    CONSTANTE      desplazar e ir al estado 56
    PARIZ          desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 59
    CARACTER       desplazar e ir al estado 60
    OPB_ADD        desplazar e ir al estado 61
    OPU            desplazar e ir al estado 62
